--- a/pages/plantele_mele.html
+++ b/pages/plantele_mele.html
@@ -101,17 +101,16 @@
         </div>
         <div class="swiper-button-next swiper-navBtn"></div>
         <div class="swiper-button-prev swiper-navBtn"></div>
-      </div>
+    </div>
 
     <!------------------------JS------------------------------------------------------->
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- JavaScript -->
-    <script src="script.js"></script>
+    <script src="swipe.js"></script>
 
     <!------------------------------------FORM--------------------------------------------------->
     <br><br><br><br>
-    <div class="column">
       <section class="container">
         <header>PLANTA MEA</header>
         <form action="#" class="form">
@@ -143,7 +142,6 @@
           <button>Adauga planta</button>
         </form>
       </section>
-    </div>
     <!-- <form>
         <fieldset>
             <legend>Planta mea</legend>
