tentativa de container cu info despre temp si umiditate+ centrare form

--- a/pages/plantele_mele.html
+++ b/pages/plantele_mele.html
@@ -21,6 +21,21 @@
         <a href="depre_noi.html">Despre noi</a>
     </nav>
     </div>
+    <!------------------------------------container--------------------------------------------------->
+    <div class="section1" style=" height: 660px; margin-bottom: 120px; width: 100%; background-color: #cfcdb5 ;">
+      <div class="container" style=" position: absolute; width: 40%;">
+        <img src="../photos/plant1.jpg" style="height: auto; width: 38%;">
+        <div class="overlay_c">
+          <div class="text">.........</div>
+        </div>
+      </div>
+      <div class="text_section">
+        <h1>Suntem fericiți să te ajutăm să ai grijă de <em>planta ta</em></h1>
+        <p>Îngrijirea plantelor este un proces esențial pentru sănătatea acestora și pentru a ne bucura de beneficiile pe care le aduc în viața noastră. Apa și lumina sunt două dintre cele mai importante elemente de care trebuie să ținem cont atunci când avem grijă de plante. Apa trebuie administrată corect, având grijă să nu fie nici prea multă, pentru a preveni putrezirea rădăcinilor, nici prea puțină, pentru a nu lăsa planta să se usuce. De asemenea, lumina joacă un rol esențial în procesul de fotosinteză, prin care plantele produc nutrienții necesari creșterii lor. Fiecare plantă are nevoi diferite în privința luminii, unele necesitând expunere directă la soare, în timp ce altele se simt confortabil într-un mediu mai umbros.</p>
+        <p>Pe lângă apă și lumină, temperatura și umiditatea sunt factori importanți care influențează dezvoltarea plantelor. Fiecare plantă are o gamă de temperaturi ideale în care se simte cel mai bine. Plantele tropicale, de exemplu, preferă un mediu cald și umed, în timp ce plantele de deșert sunt adaptate la temperaturi mai ridicate și un aer mai uscat. Umiditatea joacă un rol semnificativ în procesul de transpirație al plantelor și în menținerea unui echilibru adecvat al apei în celule. Plantele care nu beneficiază de condiții de umiditate corespunzătoare pot deveni sensibile la boli sau pot avea o creștere deficitară.</p>
+        <p>Un alt element important în îngrijirea plantelor este solul, care furnizează nutrienții esențiali pentru dezvoltarea acestora. Un sol bine drenat, aerat și fertilizat corespunzător permite rădăcinilor să absoarbă apa și mineralele necesare. Fiecare tip de plantă preferă un anumit tip de sol, fie că este vorba despre soluri acide, neutre sau alcaline. Prin urmare, pentru a ne asigura că plantele noastre cresc sănătoase și viguroase, este esențial să le oferim condițiile optime de apă, lumină, temperatură, umiditate și sol, astfel încât să le sprijinim în procesul lor natural de creștere și înflorire.</p>
+      </div>
+    </div>
     <!------------------------------------IMAGE-SLIDER------------------------------------------->
     <br><br><br><br>
     <div class="slide-container swiper">
@@ -109,9 +124,9 @@
     <!-- JavaScript -->
     <script src="swipe.js"></script>
 
+    
     <!------------------------------------FORM--------------------------------------------------->
-    <br><br><br><br>
-      <section class="container">
+      <section class="container_form">
         <header>PLANTA MEA</header>
         <form action="#" class="form">
           <div class="input-box">
