js grafic umiditate si temp

--- a/pages/plantele_mele.html
+++ b/pages/plantele_mele.html
@@ -52,7 +52,7 @@
               <div class="card-content">
                 <h2 class="name">PLANT1</h2>
                 <p class="description">DESCRIPTION</p>
-                <button class="button">Vezi</button>
+                <button id="plant1" class="button" onclick="showData()">Vezi</button>
               </div>
             </div>
     <!----------PLANT2--------------------------------------------------------------------->
@@ -122,7 +122,7 @@
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- JavaScript -->
-    <script src="swipe.js"></script>
+    <script src="../js/swipe.js"></script>
 
     
     <!------------------------------------FORM--------------------------------------------------->
@@ -207,6 +207,6 @@
             </div>
         </div>
     </div>
-    <script src="../scrips.js"></script>
+    <script src="../js/plant_reader.js"></script>
 </body>
 </html>
