--- a/pages/plantele_mele.html
+++ b/pages/plantele_mele.html
@@ -56,19 +56,45 @@
               </div>
             </div>
     <!----------PLANT2--------------------------------------------------------------------->
-            <div class="card swiper-slide">
-              <div class="image-content">
-                <span class="overlay"></span>
-                <div class="card-image">
-                  <img src="../photos/D_N_2.jpg" alt="" class="card-img">
-                </div>
-              </div>
-              <div class="card-content">
-                <h2 class="name">PLANT2</h2>
-                <p class="description">DESCRIPTION</p>
-                <button class="button">Vezi</button>
-              </div>
-            </div>
+    <div class="card swiper-slide">
+      <div class="image-content">
+        <span class="overlay"></span>
+        <div class="card-image">
+          <!-- Image acts as a button for the popup -->
+          <img src="../photos/spider_plant.jpg" alt="Plant 2" class="card-img" onclick="showPopup('../photos/spider_plant.jpg', `
+          <h2>🪴 Nume plantă păianjen</h2>
+          <p><strong>Nume popular:</strong> Planta păianjen</p>
+          <p><strong>Nume științific:</strong> Chlorophytum comosum</p>
+          <p><strong>Nume în engleză:</strong> Spider Plant</p>
+          <h3>🌍 Origine</h3>
+          <p>Provine din Africa de Sud</p>
+          <p>S-a răspândit în întreaga lume ca plantă de apartament datorită aspectului ei și rezistenței</p>
+          <h3>🌱 Descriere</h3>
+          <p>Frunze lungi, înguste, arcuite, de culoare verde cu margini albe sau galbene (în funcție de varietate)</p>
+          <p>Produce puișori (plante mici) la capătul tijelor florale — de aici și numele de „planta păianjen”</p>
+          <h3>🧑‍🌾 Mod de îngrijire</h3>
+          <p><strong>☀️ Lumină:</strong> Preferă lumină indirectă puternică, dar tolerează și semi-umbră. Evită lumina directă a soarelui – poate arde frunzele.</p>
+          <p><strong>💧 Udare:</strong> Udă moderat – lasă solul să se usuce ușor între udări. Vara: 1-2 ori pe săptămână. Iarna: mai rar, o dată la 10-14 zile.</p>
+          <p><strong>🌡️ Temperatură:</strong> Ideal între 18–24°C. Nu o expune la temperaturi sub 10°C.</p>
+          <p><strong>🌬️ Umiditate:</strong> Se adaptează bine în casele cu aer uscat, dar îi place umiditatea moderată. Poți pulveriza frunzele ocazional.</p>
+          <h3>🌿 Înmulțire</h3>
+          <p>Foarte ușor de înmulțit: taie un puișor și plantează-l în apă sau direct în pământ.</p>
+          <h3>🌸 Flori</h3>
+          <p>Produce flori albe mici, dar este crescută mai ales pentru frunze.</p>
+          <h3>🪴 Sol și ghiveci</h3>
+          <p>Pământ universal bine drenat. Ghiveci cu drenaj bun (gauri la bază).</p>
+          <h3>✅ Alte beneficii</h3>
+          <p>Plantă non-toxică (sigură pentru animale de companie). Ajută la purificarea aerului – elimină toxine precum formaldehida.</p>
+          `)">
+        </div>
+      </div>
+      <div class="card-content">
+        <h2 class="name">PLANTA PAIANJEN</h2>
+        <p class="description">Rezistentă, purificatoare, adaptabilă.</p>
+        <!-- Retain the "Vezi" button -->
+        <button class="button" >Vezi</button>
+      </div>
+    </div>
     <!----------PLANT3--------------------------------------------------------------------->
             <div class="card swiper-slide">
               <div class="image-content">
