--- a/pages/plantele_mele.html
+++ b/pages/plantele_mele.html
@@ -150,7 +150,25 @@
     <!-- JavaScript -->
     <script src="../js/swipe.js"></script>
 
-    
+    <!------------------------------------PLANT-STRIKE--------------------------------------------------->
+    <div class="strike-container">
+      <h2>🌱Planta ta te așteaptă la control</h2>
+      <p id="strike-message">Planta ta: vie, moartă sau în comă botanică?</p>
+      <button id="check-plant-button" onclick="checkPlant()">✅ Check Planta</button>
+      <div id="week-container" class="week-container">
+        <h3>🌟 Progres săptămânal</h3>
+        <div class="week-days">
+          <div class="day" id="day-1">Lun</div>
+          <div class="day" id="day-2">Mar</div>
+          <div class="day" id="day-3">Mie</div>
+          <div class="day" id="day-4">Joi</div>
+          <div class="day" id="day-5">Vin</div>
+          <div class="day" id="day-6">Sam</div>
+          <div class="day" id="day-7">Dum</div>
+        </div>
+      </div>
+      <p id="strike-count">Zile supraviețuite: <span id="streak">0</span></p>
+    </div>
     <!------------------------------------FORM--------------------------------------------------->
       <section class="container_form">
         <header>PLANTA MEA</header>
