slideshow from despre noi is done and changed the quotes

--- a/pages/depre_noi.html
+++ b/pages/depre_noi.html
@@ -15,6 +15,7 @@
             <a href="depre_noi.html">Despre noi</a>
         </nav>
     </div>
+
     <div class="container2">
         <img src="../photos/despre_noi_1.jpg" alt="plante" width="1381" height="750">
 		<div class="text-box">
@@ -25,82 +26,70 @@
         </div>
     </div>
 
-    <div class="container3">
-        <div class="info">
-            <br><br>
-            <img src="../photos/D_N_3.jpg" alt="plante" width="500" height="300">
+    <div class="slideshow-container">
+        <div class="mySlides">
+            <img src="../photos/slideshow.jpg" alt="Slide 1">
             <div class="text-box2">
                 <h1>Ce problema rezolva Verdyne?</h1>
                 <br>
                 <p>Verdyne rezolvă una dintre problemele iubitorilor de plante: lipsa de informații precise despre nevoile reale ale acestora. Mulți oameni își pierd plantele din cauza udării excesive sau insuficiente, a luminii neadecvate sau a unor condiții de mediu nepotrivite.</p>
                 <p>Prin utilizarea senzorilor inteligenți, Verdyne elimină incertitudinea și îți oferă date exacte despre starea plantelor tale. Astfel, aplicația îți spune exact ce trebuie să faci pentru a menține plantele sănătoase, fiind soluția perfectă atât pentru începători, cât și pentru pasionați, care vor să le ofere cea mai bună îngrijire posibilă.</p>
-
             </div>
-	    </div>
-    </div>
-    <br><br><br><br><br><br><br>
-    <div class="container3">
-        <div class="info2">
-            <img src="../photos/D_N_2.jpg" alt="plante" width="500" height="300">
+        </div>
+        <div class="mySlides">
+            <img src="../photos/slideshow.jpg" alt="Slide 2">
             <div class="text-box2">
-                <br><br><br>
                 <h1>Cui i se adresează Verdyne?</h1>
                 <br>
                 <p>Aplicația este potrivită atât pentru începători, care nu știu exact cum să își îngrijească plantele, cât și pentru pasionați de grădinărit care vor să optimizeze creșterea plantelor lor. De asemenea, este ideală pentru cei care au un stil de viață aglomerat și vor o soluție inteligentă pentru îngrijirea plantelor.</p>
             </div>
-	    </div>
-    </div>
-    <br><br><br><br><br><br>
-    <div class="container3">
-        <div class="info">
-            <img src="../photos/D_N_4.jpg" alt="plante" width="500" height="300">
+        </div>
+        <div class="mySlides">
+            <img src="../photos/slideshow.jpg" alt="Slide 3">
             <div class="text-box2">
-                <br><br><br>
                 <h1>Ce tipuri de senzori folosește Verdyne și ce măsoară aceștia?</h1>
                 <br>
                 <p>Verdyne utilizează senzori de umiditate a solului, temperatură și lumină. Acești senzori detectează condițiile din mediul plantei și trimit date către aplicație, care apoi îți oferă recomandări personalizate.</p>
             </div>
-	    </div>
-    </div>
-    <br><br><br><br><br><br><br>
-    <div class="container3">
-        <div class="info2">
-            <img src="../photos/D_N_5.jpg" alt="plante" width="500" height="300">
+        </div>
+        <div class="mySlides">
+            <img src="../photos/slideshow.jpg" alt="Slide 4">
             <div class="text-box2">
-                <br><br><br>
                 <h1>Care este viziunea noastră pentru îngrijirea plantelor?</h1>
                 <br>
                 <p>Credem într-o lume în care tehnologia și natura pot colabora armonios. Ne dorim ca fiecare persoană să poată îngriji plantele fără efort, folosind date precise și recomandări inteligente.</p>
             </div>
         </div>
-    </div>
-    <br><br><br><br><br><br>
-
-    <div class="container3">
-        <div class="info">
-            <img src="../photos/D_N_3.jpg" alt="plante" width="500" height="300">
+        <div class="mySlides">
+            <img src="../photos/slideshow.jpg" alt="Slide 5">
             <div class="text-box2">
-                <br><br><br>
                 <h1>Cum contribuie Verdyne la un stil de viață mai sustenabil?</h1>
                 <br>
-                <p>Prin optimizarea consumului de apă și evitarea risipei de resurse, Verdyne promovează un mod de viață mai sustenabil. Utilizatorii sunt încurajați să își îngrijească plantele responsabil, contribuind astfel la un mediu mai verde și mai echilibrat.</p>
+                <p>Prin optimizarea consumului de apă și evitarea risipei de resurse, Verdyne promovează un mod de viață mai sustenabil. Utilizatorii sunt încurajați să își îngrijească plantele responsabil, contribuind astfel la un mediu mai verde și mai echilibrat.</p>            
             </div>
-	    </div>
-    </div>
-    <br><br><br><br><br><br><br>
-    <div class="container3">
-        <div class="info2">
-            <img src="../photos/D_N_3.jpg" alt="plante" width="500" height="300">
+        </div>
+        <div class="mySlides">
+            <img src="../photos/slideshow.jpg" alt="Slide 6">
             <div class="text-box2">
-                <br><br><br>
                 <h1>Cum poate fi îmbunătățită aplicația?</h1>
                 <br>
-                <p>Pe lângă integrarea cu dispozitive inteligente, vrem să adăugăm funcționalități avansate, cum ar fi predicții bazate pe inteligență artificială și notificări personalizate pentru fiecare utilizator. De asemenea, plănuim să includem o comunitate unde utilizatorii pot împărtăși experiențe și sfaturi.</p>
+                <p>Pe lângă integrarea cu dispozitive inteligente, vrem să adăugăm funcționalități avansate, cum ar fi predicții bazate pe inteligență artificială și notificări personalizate pentru fiecare utilizator. De asemenea, plănuim să includem o comunitate unde utilizatorii pot împărtăși experiențe și sfaturi.</p>            
             </div>
-	    </div>
+        </div>
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
-    <br><br><br><br><br><br>
-    
+
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+        <span class="dot" onclick="currentSlide(5)"></span>
+        <span class="dot" onclick="currentSlide(6)"></span>
+    </div>
+
+    <script src="../js/slide-show.js"></script> 
 
     <div class="footer">
         <div class="container_f">
