--- a/pages/plantele_mele.html
+++ b/pages/plantele_mele.html
@@ -26,7 +26,7 @@
       <div class="container">
         <img src="../photos/plant1.jpg" alt="Plant Image">
         <div class="overlay_c">
-          <div class="text">„Fiecare frunză care crește este un reminder că lucrurile bune necesită timp și îngrijire.”</div>
+          <div class="text"><i>„Plantează astfel încât inima ta să crească.”</i> – Hafiz</div>
         </div>
       </div>
       <div class="text_section">
@@ -205,7 +205,7 @@
       <div class="container2">
         <img src="../photos/plant5.jpg" alt="Plant Image">
         <div class="overlay_c2">
-          <div class="text">„Fiecare zi este o oportunitate de a îngriji și a învăța despre planta ta.”</div>
+          <div class="text"><i>„A planta o grădină înseamnă a crede în ziua de mâine.”</i>– Audrey Hepburn</div>
         </div>
       </div>
     </div>
@@ -221,10 +221,6 @@
             <div class="input-box">
               <label>Specia:</label>
               <input type="text" placeholder="Introdu specia plantei" required />
-            </div>
-            <div class="input-box">
-              <label>Ziua de nastere:</label>
-              <input type="date" placeholder="Introdu ziua de nastere" required />
             </div>
             <button type="submit">Trimite</button>
           </form>
