fixed the descopera button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<img src = "photos/LandingPageImg.jpg" alt="verdyne" width="1510" height="750">
 			<div class="container_text">
 				<h1>Verdyne</h1>
-				<a href="depre_noi.html">
+				<a href="pages/depre_noi.html">
 					<button>Descopera</button>
 				</a>
 				
