repaired the vezi button

--- a/pages/plantele_mele.html
+++ b/pages/plantele_mele.html
@@ -55,11 +55,11 @@
                 <h2 class="name">PLANT1</h2>
                 <p class="description">DESCRIPTION</p>
                 <button id="plant1" class="button" onclick="showData()">Vezi</button>
-                <div id="data">
+                <div id="data" class="hidden">
                   <p id="temp">Temperature: ---</p>
                   <p id="humi">Humidity: ---</p>
                 </div>
-                <canvas id="combinedChart" width="400" height="200"></canvas>
+                <canvas id="combinedChart" width="400" height="200" class="hidden"></canvas>
               </div>
             </div>
     <!----------PLANT2--------------------------------------------------------------------->
