--- a/pages/plantele_mele.html
+++ b/pages/plantele_mele.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Despre noi</title>
+    <title>Plantele mele</title>
     <link rel="stylesheet" href="../css/plantele_mele.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/footer.css">
@@ -73,12 +73,13 @@
               <div class="card-content">
                 <h2 class="name">ALOE VERA</h2>
                 <p class="description">Rezistentă, vindecătoare, decorativă.</p>
-                <button id="plant1" class="button" onclick="showData()">Vezi</button>
+                <a href="plant.html" class="button">vezi</a>
+                <!-- <button id="plant1" class="button" onclick="showData()">Vezi</button>
                 <div id="data" class="hidden">
                   <p id="temp">Temperature: ---</p>
                   <p id="humi">Humidity: ---</p>
                 </div>
-                <canvas id="combinedChart" width="400" height="200" class="hidden"></canvas>
+                <canvas id="combinedChart" width="400" height="200" class="hidden"></canvas> -->
               </div>
             </div>
     <!----------PLANT2--------------------------------------------------------------------->
@@ -118,7 +119,7 @@
         <h2 class="name">PLANTA PAIANJEN</h2>
         <p class="description">Rezistentă, purificatoare, adaptabilă.</p>
         <!-- Retain the "Vezi" button -->
-        <button id="plant2" class="button" onclick="showData()">Vezi</button>
+        <a href="plant.html" class="button">vezi</a>
       </div>
     </div>
     <!----------PLANT3--------------------------------------------------------------------->
@@ -156,7 +157,7 @@
         <h2 class="name">LIMBA SOACREI</h2>
         <p class="description">Ușor de întreținut.</p>
         <!-- Retain the "Vezi" button -->
-        <button id="plant3" class="button" onclick="showData()">Vezi</button>
+        <a href="plant.html" class="button">vezi</a>
       </div>
     </div>
     <!----------PLANT4--------------------------------------------------------------------->
@@ -170,7 +171,7 @@
               <div class="card-content">
                 <h2 class="name">PLANT4</h2>
                 <p class="description">DESCRIPTION</p>
-                <button class="button">Vezi</button>
+                <a href="plant.html" class="button">vezi</a>
               </div>
             </div>
     <!----------PLANT5--------------------------------------------------------------------->
@@ -184,7 +185,7 @@
               <div class="card-content">
                 <h2 class="name">PLANT5</h2>
                 <p class="description">DESCRIPTION</p>
-                <button class="button">Vezi</button>
+                <a href="plant.html" class="button">vezi</a>
               </div>
             </div>
     <!------------------------------------------------------------------------------->
