tentativa de notificare

--- a/pages/plant.html
+++ b/pages/plant.html
@@ -22,7 +22,7 @@
    </nav>
    </div>
    
-    <!------------------------------------HEADER------------------------------------------------->
+    <!------------------------------------graph------------------------------------------------->
     <div class="text">
         <h1 style="margin-top: 5%;">Planta mea</h1><br>
         <p>Datele înregistrate de senzorul de umiditate și temperatură din aer.</p>
@@ -34,6 +34,9 @@
         </div>
         <canvas id="combinedChart" width="400" height="200"></canvas>
     </div>
+    <div id="notification" class="hidden">
+        <p id="notification-message"></p>
+      </div>
     <h1>SENZOR DE UMIDITATE ȘI TEMPERATURĂ</h1>
     <div class="container"> 
         <div class="row">
