am corectat graficul si notificarea

--- a/pages/plant.html
+++ b/pages/plant.html
@@ -35,7 +35,7 @@
         <canvas id="combinedChart" width="400" height="200"></canvas>
     </div>
     <div id="notification" class="hidden">
-        <p id="notification-message"></p>
+        <p id="notification-message">AAAAAA!!!</p>
       </div>
     <h1>SENZOR DE UMIDITATE ȘI TEMPERATURĂ</h1>
     <div class="container"> 
